<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_big_xx"
            android:textColor="@color/color_3F3F3F"
            android:text="@string/use_title"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_E8E7E9"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/color_3F3F3F"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/use_title_1"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/uncompleted_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/ll_use_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/icon_use_1"
                android:text="@string/use_1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/icon_use_2"
                android:text="@string/use_2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/color_3F3F3F"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/use_title_2"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/uncompleted_text_color"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/ll_use_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/icon_use_5"
                android:text="@string/use_5"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/icon_use_6"
                android:text="@string/use_6"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/icon_use_7"
                android:text="@string/use_7"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
