<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_big_xx"
            android:textColor="@color/color_3F3F3F"
            android:text="@string/use_title"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/uncompleted_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/dp_100"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_publish_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/ic_publish_group"
                android:text="@string/use_1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_publish_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/ic_publish_public_num"
                android:text="@string/use_2"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
