<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_mine_top">
            
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big_xx"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/capital_1"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:layout_marginTop="-91dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/bg_loading_dialog"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_36"
                android:textColor="@color/color_666666"
                android:layout_marginTop="28dp"
                android:layout_gravity="center_horizontal"
                android:text="0.00"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_999999"
                    android:layout_marginTop="1dp"
                    android:text="@string/capital_2"/>

                <ImageView
                    android:id="@+id/iv_capital_1"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/icon_capital_1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_6E757F"
                android:text="@string/capital_3"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/color_29354D"
                android:text="0.00"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="22dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/uncompleted_text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_6E757F"
                android:text="@string/capital_4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/color_29354D"
                android:text="0.00"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="22dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/uncompleted_text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_6E757F"
                android:text="@string/capital_5"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/color_29354D"
                android:text="0.00"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="22dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/uncompleted_text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_6E757F"
                android:text="@string/capital_6"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/color_29354D"
                android:text="0.00"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="22dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/uncompleted_text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_6E757F"
                android:text="@string/capital_7"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/color_29354D"
                android:text="0.00"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="22dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/uncompleted_text_color"/>




    </LinearLayout>

</ScrollView>